# im_param

./: .gitignore  CMakeLists.txt  Jenkinsfile  ci.bat  ci.sh  readme.md  vcpkg.json
.ci/: Dockerfile.ubuntu-bionic  Dockerfile.ubuntu-focal  Dockerfile.ubuntu-jammy  Dockerfile.ubuntu-xenial  cistatus.html
doc/: callflow-kickoff-etc.graphml  grammar-1.0.txt  grammar.txt  sequence_diagram.txt
im_param/: CMakeLists.txt
im_param/include/im_param/: backends.h  im_param.h  std_collections.h
im_param/include/im_param/backends/: glsl_struct_generator_backend.h  imgui_backend.h  json_backend.h
im_param/include/im_param/detail/: backend.h  collection.h  cpp11_template_logic.h  flags.h
im_param/src/: example.cpp
im_param_tests/: CMakeLists.txt  cpp11_templates.cpp  forward_from_backend.cpp  forward_from_backend_minimal.cpp  forward_from_backend_minimal_level_0.cpp  forward_from_backend_minimal_level_00.cpp  forward_from_backend_minimal_level_00a_wont_compile_on_gcc.cpp  forward_from_backend_minimal_level_01.cpp  forward_from_backend_minimal_level_02.cpp  forward_from_backend_minimal_level_02a_wont_compile_on_gcc.cpp  forward_from_backend_minimal_level_03.cpp  forward_from_backend_minimal_level_04a.cpp  forward_from_backend_minimal_level_04b.cpp  forward_from_backend_minimal_level_05.cpp  forward_from_backend_minimal_level_06.cpp  forward_from_backend_minimal_level_07.cpp  forward_from_backend_minimal_level_08.cpp  forward_from_backend_minimal_level_09.cpp  forward_from_backend_minimal_level_0a_wont_compile_on_gcc.cpp  forward_from_backend_minimal_level_1.cpp  forward_from_backend_minimal_level_2.cpp  forward_from_backend_minimal_level_2a_wont_compile_on_gcc.cpp  forward_from_backend_minimal_level_3.cpp  forward_from_backend_minimal_level_4a.cpp  forward_from_backend_minimal_level_4b.cpp  forward_from_backend_minimal_level_5.cpp  forward_from_backend_minimal_level_6.cpp  forward_from_backend_minimal_level_7.cpp  forward_from_backend_minimal_level_8.cpp  forward_from_backend_minimal_level_9.cpp  forward_to_backend.cpp  generic_and_nested_types.cpp  im_param_foundations_level_00.cpp  im_param_foundations_level_00a_wont_compile_on_gcc.cpp  im_param_foundations_level_01.cpp  im_param_foundations_level_02.cpp  im_param_foundations_level_02a_wont_compile_on_gcc.cpp  im_param_foundations_level_03.cpp  im_param_foundations_level_04a.cpp  im_param_foundations_level_04b.cpp  (+9 more)
